@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.522 2005/12/11 05:01:21 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.523 2005/12/11 18:22:56 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIClientController.py:
+  use GLIException when there's an import problem
 
   11 Dec 2005; Preston Cody <codeman@gentoo.org>
   added initial glossary and gimli diagram to the docs directory.
